<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="name_aman_kumar_singh">Name: Aman Kumar Singh</string>
    <string name="education_btech_ece_ctae_udaipur">Education: BTech ECE(CTAE Udaipur)</string>
    <string name="contact_8005715846">Contact: 8005715846</string>
    <string name="email_itsamankrsingh_gmail_com">Email: itsamankrsingh@gmail.com</string>
    <string name="about_developer">About: A technology enthusiast. Beginner in Android Development.
        Currently looking for an internship.</string>
    <string name="list_item">List Item</string>
    <string name="check_internet">Check Internet</string>
    <string name="name_of_book">Name Of Book</string>
    <string name="name_of_author">Name Of Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove_favourites">Remove From Favourites</string>
</resources>
